[gd_scene load_steps=3 format=2]

[ext_resource path="res://main/SubTask.gd" type="Script" id=1]
[ext_resource path="res://godot-alt-window/UI/SkiddleUI.tres" type="Theme" id=2]

[node name="HBoxContainer2" type="HBoxContainer" groups=["tasks"]]
margin_top = 88.0
margin_right = 994.0
margin_bottom = 138.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 55.0
margin_bottom = 55.0
rect_min_size = Vector2( 55, 0 )
color = Color( 0, 0, 0, 0 )

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 59.0
margin_right = 109.0
margin_bottom = 55.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 0
theme = ExtResource( 2 )

[node name="LineEdit" type="TextEdit" parent="."]
margin_left = 113.0
margin_right = 971.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Hella"
hiding_enabled = true
wrap_enabled = true
caret_block_mode = true
caret_blink = true

[node name="Button" type="Button" parent="."]
margin_left = 975.0
margin_right = 994.0
margin_bottom = 55.0
text = "x"

[connection signal="toggled" from="CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
